k8s/odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
spec:
  selector:
    app: odoo
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
